--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/genai": "^1.25.0",
     "next": "15.5.4",
     "openai": "^6.4.0",
     "react": "19.1.0",
