--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.25.0",
+    "@supabase/supabase-js": "^2.75.1",
     "next": "15.5.4",
     "openai": "^6.4.0",
     "react": "19.1.0",
