--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.25.0",
     "@supabase/supabase-js": "^2.75.1",
+    "fluent-ffmpeg": "^2.1.3",
     "next": "15.5.4",
     "openai": "^6.4.0",
     "react": "19.1.0",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
