--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/genai": "^1.25.0",
     "@supabase/supabase-js": "^2.75.1",
+    "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "next": "15.5.4",
     "openai": "^6.4.0",
